--- a/Drinks_Menu/drinks.html
+++ b/Drinks_Menu/drinks.html
@@ -14,7 +14,7 @@
    <!-- Navbar -->
  <nav class="navbar navbar-expand-lg ">
   <div class="container">
-      <a class="navbar-brand" href="../home.html"><span>Res</span>taurant</a>
+      <a class="navbar-brand" href="../index.html"><span>Res</span>taurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" style="border: 1px solid #c7ae38;" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../home.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -51,7 +51,7 @@
         <h2>Drinks <i class="fas fa-cocktail icon"></i></h2>
         <input type="text" id="search" placeholder="Search desserts...">
         <div class="recipes" id="recipes"></div>
-        <a href="../Home/home.html" class="back-home">← Back to Home</a>
+        <a href="../Home/index.html" class="back-index">← Back to Home</a>
 
       </div>
   <!-- Start Footer -->
