--- a/Dessert_Menu/dessert.html
+++ b/Dessert_Menu/dessert.html
@@ -51,7 +51,7 @@
         <h2>Desserts <i class="fa-solid fa-cookie-bite"></i></h2>
         <input type="text" id="search" placeholder="Search desserts...">
         <div class="recipes" id="recipes"></div>
-        <a href="../Home/index.html" class="back-index">← Back to Home</a>
+        <a href="../index.html" class="back-home">← Back to Home</a>
     
       </div>
 
