--- a/Drinks_Menu/drinks.html
+++ b/Drinks_Menu/drinks.html
@@ -51,7 +51,7 @@
         <h2>Drinks <i class="fas fa-cocktail icon"></i></h2>
         <input type="text" id="search" placeholder="Search desserts...">
         <div class="recipes" id="recipes"></div>
-        <a href="../Home/index.html" class="back-index">← Back to Home</a>
+        <a href="../index.html" class="back-home">← Back to Home</a>
 
       </div>
   <!-- Start Footer -->
