--- a/Salt_Menu/salt.html
+++ b/Salt_Menu/salt.html
@@ -55,7 +55,7 @@
         <input type="text" id="search" placeholder="Search Main Dishes...">
         <div class="recipes" id="recipes"></div>
     
-        <a href="../Home/index.html" class="back-index">← Back to Home</a>
+        <a href="../index.html" class="back-home">← Back to Home</a>
     </div>
     
     <!-- Start Footer -->
