--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             aria-expanded="false">
                             Menu
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu p-absolute">
                             <li><a class="dropdown-item" href="Salt_Menu/salt.html">Salt</a></li>
                             <li><a class="dropdown-item" href="Drinks_Menu/drinks.html">Drinks</a></li>
                             <li><a class="dropdown-item" href="Dessert_Menu/dessert.html">Dessert</a></li>
@@ -217,7 +217,7 @@
     <!-- Start Footer -->
     <footer class="new-footer">
         <div class="container">
-            <div class="row">
+            <div class="row text-center">
 
                 <div class="col-md-3 footer-column">
                     <h5>CONTACT US</h5>
