--- a/Drinks_Menu/drinks.html
+++ b/Drinks_Menu/drinks.html
@@ -57,7 +57,7 @@
   <!-- Start Footer -->
   <footer class="new-footer">
     <div class="container">
-        <div class="row">
+        <div class="row text-center">
 
             <div class="col-md-3 footer-column">
                 <h5>CONTACT US</h5>
